src/snapshots/hello_mlir__parser__tests__parse_assignment.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - Assign:
      name: x
      value:
        IntLit:
          value: 42
          span:
            start: 4
            end: 6
            context: ~
      span:
        start: 0
        end: 7
        context: ~
