src/snapshots/hello_mlir__parser__tests__parse_mutable_variable_declaration.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - VarDecl:
      name: x
      type: I32
      value:
        IntLit: 42
