src/snapshots/hello_mlir__parser__tests__parse_mutable_variable_declaration_without_type.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - VarDecl:
      name: x
      type: ~
      value:
        IntLit: 42
